--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WOT Books Amazon</title>
+    <link rel="stylesheet" href="main.css">
 </head>
     <body>
             <div id="page-wrapper">
-                <header id="header">
+                <header class="header">
                     <img id="header-img">
                     
                     <nav id="nav-bar">
