--- a/index.html
+++ b/index.html
@@ -5,26 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WOT Books Amazon</title>
     <link rel="stylesheet" href="main.css">
+
 </head>
     <body>
+        <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
             <div id="page-wrapper">
-                <header class="header">
-                    <img id="header-img">
-                    
+                <header id="header">
+                    <div class="logo">
+                        <img 
+                        id="header-img" 
+                        src="img/Aessedai-icon.png" 
+                        alt="The AsShedai Simbol">
+                    </div>
                     <nav id="nav-bar">
                         <ul>
-                            <li><a class="nav-link" id="features" href="features">Features</a></li>
-                            <li><a class="nav-link" id="how-it-works" href="how-it-works">
+                            <li><a class="nav-link" href="#features">Features</a></li>
+                            <li><a class="nav-link" href="#how-it-works">
                                 Wheel of Time the Wonderfull Series</a></li>
-                            <li><a class="nav-link" id="price" href="price">Price</a></li>
+                            <li><a class="nav-link" href="#price">Price</a></li>
                         </ul>
                     </nav>
                 </header>
                 <section id="get-email">
                     <h2>Amazon Kindle Books</h2>
 
-                    <form id="form">
-                        <label for="email"> E-mail: 
+                    <form id="form" action="#https://www.freecodecamp.com/email-submit">
+                        <label for="email">E-mail: 
                             <input 
                             name="email"
                             id="email" 
@@ -32,11 +38,12 @@
                             placeholder="Enter your email address." 
                             required>
                         </label>
-                        <input 
+                        <input
                         name="submit"
                         type="submit" 
                         id="submit" 
-                        class="bnt">
+                        class="bnt"
+                        >
                     </form>
                 </section>
 
